# burgers-rusanov-parallel

./: .gitignore  1_sequential_rusanov.ipynb  1_sequential_rusanov.py  2_parallel_rusanov.py  2a_run_burgers_parallel.sh  3_run_on_plgrid.sh  3_visualization.ipynb  3_visualization.py  4_analysis.ipynb  4_analysis.py  4_performance_analysis.ipynb  4_performance_analysis.py  README.md  pyproject.toml
plgrid_results/: burgers_shock_sine_nu0005.json  burgers_shock_sine_nu0005.npz  burgers_shock_step_nu001.json  burgers_shock_step_nu001.npz  burgers_strong_nx1200_P1.json  burgers_strong_nx1200_P1.npz  burgers_strong_nx1200_P2.json  burgers_strong_nx1200_P2.npz  burgers_strong_nx1200_P4.json  burgers_strong_nx1200_P4.npz  burgers_strong_nx1200_P8.json  burgers_strong_nx1200_P8.npz  burgers_strong_nx2400_P1.json  burgers_strong_nx2400_P1.npz  burgers_strong_nx2400_P16.json  burgers_strong_nx2400_P16.npz  burgers_strong_nx2400_P2.json  burgers_strong_nx2400_P2.npz  burgers_strong_nx2400_P4.json  burgers_strong_nx2400_P4.npz  burgers_strong_nx2400_P8.json  burgers_strong_nx2400_P8.npz  burgers_strong_nx4800_P1.json  burgers_strong_nx4800_P1.npz  burgers_strong_nx4800_P16.json  burgers_strong_nx4800_P16.npz  burgers_strong_nx4800_P2.json  burgers_strong_nx4800_P2.npz  burgers_strong_nx4800_P24.json  burgers_strong_nx4800_P24.npz  burgers_strong_nx4800_P32.json  burgers_strong_nx4800_P32.npz  burgers_strong_nx4800_P4.json  burgers_strong_nx4800_P4.npz  burgers_strong_nx4800_P8.json  burgers_strong_nx4800_P8.npz  burgers_strong_nx600_P1.json  burgers_strong_nx600_P1.npz  (+22 more)
(+5 files in other folders)
